manifest/11-image-security.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securty-system

---
apiVersion: v1
kind: Namespace
metadata:
  name: testing

---
apiVersion: v1
kind: Namespace
metadata:
  name: production
