manifest/12-vault-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
